Show total photo count in header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <h1>Our Moments</h1>
-    <p class="subtitle">记录我们的日常小片段</p>
+    <p class="subtitle">记录我们的日常小片段<span id="photo-count" class="photo-count"></span></p>
     <div class="header-buttons">
       <button id="random-btn" class="header-btn" aria-label="随机照片">🎲 随机回忆</button>
       <button id="theme-toggle" class="header-btn" aria-label="切换主题">🌙</button>
