Add cache-busting for static assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <title>Our Moments</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="styles.css" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <link rel="stylesheet" href="styles.css?v=20260205-1" />
 </head>
 <body>
   <header class="site-header">
@@ -40,8 +43,8 @@
 
   <button id="back-to-top" class="back-to-top hidden" aria-label="返回顶部">↑</button>
 
-  <script src="photos.js"></script>
-  <script src="script.js"></script>
-  <script src="yinghua.js"></script>
+  <script src="photos.js?v=20260205-1"></script>
+  <script src="script.js?v=20260205-1"></script>
+  <script src="yinghua.js?v=20260205-1"></script>
 </body>
 </html>
