Tweak love timer text and add category filters

--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <link rel="stylesheet" href="styles.css?v=20260205-2" />
+  <link rel="stylesheet" href="styles.css?v=20260205-3" />
 </head>
 <body>
   <header class="site-header">
     <h1>LFY❤️LJY</h1>
     <p id="love-timer" class="love-timer"></p>
     <p class="subtitle">记录我们的日常小片段<span id="photo-count" class="photo-count"></span></p>
+    <nav class="category-nav" id="category-nav">
+      <button class="category-btn active" data-category="all">全部</button>
+      <button class="category-btn" data-category="confession">表白</button>
+      <button class="category-btn" data-category="portrait">写真</button>
+      <button class="category-btn" data-category="daily">日常</button>
+    </nav>
     <div class="header-buttons">
       <button id="random-btn" class="header-btn" aria-label="随机照片">🎲 随机回忆</button>
       <button id="theme-toggle" class="header-btn" aria-label="切换主题">🌙</button>
@@ -44,8 +50,8 @@
 
   <button id="back-to-top" class="back-to-top hidden" aria-label="返回顶部">↑</button>
 
-  <script src="photos.js?v=20260205-2"></script>
-  <script src="script.js?v=20260205-2"></script>
-  <script src="yinghua.js?v=20260205-2"></script>
+  <script src="photos.js?v=20260205-3"></script>
+  <script src="script.js?v=20260205-3"></script>
+  <script src="yinghua.js?v=20260205-3"></script>
 </body>
 </html>
