--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <link rel="stylesheet" href="styles.css?v=20260205-3" />
+  <link rel="stylesheet" href="styles.css?v=20260205-4" />
 </head>
 <body>
   <header class="site-header">
@@ -37,6 +37,7 @@
         <div class="lightbox-meta">
           <p id="lightbox-counter" class="counter"></p>
           <p id="lightbox-date" class="date"></p>
+          <p id="lightbox-category" class="category"></p>
           <p id="lightbox-caption" class="caption"></p>
         </div>
       </div>
@@ -50,8 +51,8 @@
 
   <button id="back-to-top" class="back-to-top hidden" aria-label="返回顶部">↑</button>
 
-  <script src="photos.js?v=20260205-3"></script>
-  <script src="script.js?v=20260205-3"></script>
-  <script src="yinghua.js?v=20260205-3"></script>
+  <script src="photos.js?v=20260205-4"></script>
+  <script src="script.js?v=20260205-4"></script>
+  <script src="yinghua.js?v=20260205-4"></script>
 </body>
 </html>
