Add background music toggle and fix random category filter

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <link rel="stylesheet" href="styles.css?v=20260205-4" />
+  <link rel="stylesheet" href="styles.css?v=20260205-5" />
 </head>
 <body>
   <header class="site-header">
@@ -22,9 +22,12 @@
     </nav>
     <div class="header-buttons">
       <button id="random-btn" class="header-btn" aria-label="随机照片">🎲 随机回忆</button>
+      <button id="music-toggle" class="header-btn" aria-label="切换背景音乐">🎵 Only For You</button>
       <button id="theme-toggle" class="header-btn" aria-label="切换主题">🌙</button>
     </div>
   </header>
+
+  <audio id="bg-music" src="music/Only For You.mp3" preload="auto" loop></audio>
 
   <main>
     <section id="gallery" class="gallery"></section>
@@ -51,8 +54,8 @@
 
   <button id="back-to-top" class="back-to-top hidden" aria-label="返回顶部">↑</button>
 
-  <script src="photos.js?v=20260205-4"></script>
-  <script src="script.js?v=20260205-4"></script>
-  <script src="yinghua.js?v=20260205-4"></script>
+  <script src="photos.js?v=20260205-5"></script>
+  <script src="script.js?v=20260205-5"></script>
+  <script src="yinghua.js?v=20260205-5"></script>
 </body>
 </html>
